--- a/app/src/main/res/layout/launcher_item.xml
+++ b/app/src/main/res/layout/launcher_item.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/white"
-    android:layout_margin="2dp">
+    android:layout_marginTop="1dp"
+    android:layout_marginBottom="1dp">
 
     <ImageView
         android:id="@+id/app_icon"
